# sudku

./: .gitignore  Cargo.toml  README.md  TODO.md
sudku-grid/: Cargo.toml
sudku-grid/src/: complex.rs  grid3.rs  grid4.rs  history.rs  lib.rs  lib.rs.txt  multi_history.rs  simple.rs  test.rs
sudku-gui/: Cargo.toml
sudku-mobile/: Cargo.toml  README.md  RUN-IOS.txt  Run.ps1  index.html
sudku-mobile-old/: Init.ps1  build-ios.sh  init-ios.sh  run-ios.sh
sudku-mobile-old/ui/: index.html
sudku-mobile/assets/: pencil.png.base64  settings-blue.png.base64  undo.png.base64
sudku-mobile/src/: grid3.rs  grid4.rs  main.rs
sudku-mobile/src-tauri/: Cargo.toml  tauri.conf.json  tcj.json
sudku-mobile/src-tauri/src/: main.rs
sudku-mobile/ui/: index.html
sudku-term/: Cargo.toml
sudku-web/: Cargo.toml  index.html  index.html.txt  test.html  text.html
sudku-web/assets/: pencil-blue.png.base64  png-to-blue.go  redo.png.base64  settings.png.base64  sources.txt
sudku-web/src/: base64.rs  console.rs  grid3.rs  grid4.rs  lib.rs
sudku-web/src/old/: lib.rs.txt  old-lib.rs.txt
