[package]
name = "sudku-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21.7"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.5", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sudku-grid = { version = "0.1.0", path = "../sudku-grid" }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.67", features = ["Storage"] }
